[build-system]
requires = [
    "scikit-build-core==0.11.*",
    "xmipp4-core==0.1.*"
]
build-backend = "scikit_build_core.build"

[project]
name = "xmipp4-python"
dynamic = ["version"]
authors = [
    { name = "Oier Lauzirika Zarrabeitia", email = "oierlauzi@bizkaia.eu" },
    { name = "Martin Salinas", email = "ssalinasmartin@gmail.com" }
]
description = "Python binding for the xmipp4 framework"
classifiers = [
	"Topic :: Scientific/Engineering :: Image Processing",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
	"Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-3.0-only"

requires-python = ">=3.7"
dependencies = [
    "xmipp4-core==0.1.*"
] 

[project.optional-dependencies]
test = ["pytest>=8.3.5"]

[project.urls]
Homepage = "https://github.com/gigabit-clowns/xmipp4-python"
Issues = "https://github.com/gigabit-clowns/xmipp4-python/issues"

[tool.scikit-build]
experimental=true # For wheel.install-dir
wheel.install-dir="/data"
cmake.version = ">=3.18"
cmake.args = []
cmake.verbose = false
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
BUILD_TESTING = "OFF"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "(?P<value>\\d+\\.\\d+\\.\\d+)"

[tool.cibuildwheel]
#test-command = "{project}/scripts/run_test.sh" # TODO add when xmipp4-core is in PyPI
#test-extras = ["test"]
